clusters/home/apps/kavita/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
spec:
  selector:
    app: kavita
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  labels:
    name: kavita
  annotations:
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Self-hosted ebook reader
    gethomepage.dev/group: Apps/Services
    gethomepage.dev/icon: kavita
    gethomepage.dev/name: Kabita
    gethomepage.dev/pod-selector: app=kavita
    gethomepage.dev/weight: "1"
spec:
  rules:
  - host: kavita.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: linkwarden
            port: 
              number: 3000
